# cu_rsc

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cu_rsc/: RSC_functions.py  __init__.py  analysis.py  build_molecules.py  build_sequence.py  config.json  generate_M.py
