[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cu_rsc"
version = "0.1.0"
description = "GPU-accelerated Raman sideband cooling primitives using CuPy"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
authors = [{name = "Your Name", email = "you@example.com"}]
keywords = ["raman", "sideband-cooling", "molecular-physics", "cupy", "gpu"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research"
]

dependencies = [
  "cupy>=12.0.0",
  "numpy>=1.24.0"
]

[project.urls]
Homepage = "https://github.com/yourname/cu_rsc"
Issues = "https://github.com/yourname/cu_rsc/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cu_rsc*"]

[tool.setuptools.package-data]
cu_rsc = ["data/*"]
